<resources>
    <string name="app_name">Summer_school_HW</string>
    <string name="label_film_genre">Боевики</string>
    <string name="release_data">22.04.2021</string>
    <string name="_18">18+</string>
    <string name="film_name">Гнев человеческий</string>
    <string name="film_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="text_actors">Актеры</string>
    <string name="label_popular_now">Популярное сейчас</string>
    <string-array name="actors_names">
        <item>Джейсон Стэйтем</item>
        <item>Холт Маккэллани</item>
        <item>Джош Харнетт</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username_label">Константин</string>
    <string name="User_mail_label">konst.89@mail.com</string>
    <string name="interests_label">Интересы</string>
    <string name="shooters_genre_label">Боевики</string>
    <string name="Drama_genre_label">Драмы</string>
    <string name="comedy_genre_label">Комедии</string>
    <string name="personal_data_label">Личные данные</string>
    <string name="name_label">Имя</string>
    <string name="konstantin_label">Константин</string>
    <string name="password_label">Пароль</string>
    <string name="email_label">Почта</string>
    <string name="phone_label">Телефон</string>
    <string name="settings_label">Настроки</string>
    <string name="notify_and_sound_label">Уведомления и звуки</string>
    <string name="confident_label">Конфиденциальность</string>
    <string name="theme_label">Тема</string>
    <string name="language_label">Язык</string>
    <string name="data_and_storage_label">Данные и память</string>
    <string name="app_label">Приложение</string>
    <string name="notify_about_problem_label">Сообщить о проблеме</string>
    <string name="exit_label">Выйти</string>
    <string name="ask_question_label">Задать вопрос</string>
</resources>